unpackaged/main/default/objects/Facture_vehicule__c/Facture_vehicule__c.object-meta.xml
<CustomObject>
    <label>Facture véhicule</label>
    <nameField>
        <displayFormat>FV-{0000}</displayFormat>
        <label>Numéro de Facture véhicule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factures véhicule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>