unpackaged/main/default/objects/Facture_vehicule__c/fields/Agence__c.field-meta.xml
<CustomField>
    <fullName>Agence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Factures véhicule (Agence)</relationshipLabel>
    <relationshipName>Facture_vehicule</relationshipName>
    <type>Lookup</type>
</CustomField>