unpackaged/main/default/objects/Facture_vehicule__c/fields/Date_de_facture__c.field-meta.xml
<CustomField>
    <fullName>Date_de_facture__c</fullName>
    <label>Date de facture</label>
    <type>Date</type>
</CustomField>