unpackaged/main/default/objects/Facture_vehicule__c/fields/Date_echeance__c.field-meta.xml
<CustomField>
    <fullName>Date_echeance__c</fullName>
    <label>Date d&#39;échéance</label>
    <type>Date</type>
</CustomField>