unpackaged/main/default/objects/Facture_vehicule__c/fields/ID_facture_IGLOO__c.field-meta.xml
<CustomField>
    <fullName>ID_facture_IGLOO__c</fullName>
    <label>ID facture IGLOO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>