unpackaged/main/default/objects/Facture_vehicule__c/fields/Montant_TTC__c.field-meta.xml
<CustomField>
    <fullName>Montant_TTC__c</fullName>
    <label>Montant TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>