unpackaged/main/default/objects/Facture_vehicule__c/fields/N_Parc__c.field-meta.xml
<CustomField>
    <fullName>N_Parc__c</fullName>
    <label>N° Parc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>