unpackaged/main/default/objects/Facture_vehicule__c/fields/Numero_de_facture_IGLOO__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_facture_IGLOO__c</fullName>
    <label>Numéro de facture IGLOO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>