unpackaged/main/default/objects/Facture_vehicule__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Factures véhicules</relationshipLabel>
    <relationshipName>FacturesVehicule</relationshipName>
    <type>Lookup</type>
</CustomField>