unpackaged/main/default/objects/Facture_vehicule__c/fields/Parc__c.field-meta.xml
<CustomField>
    <fullName>Parc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parc</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Factures véhicule</relationshipLabel>
    <relationshipName>Factures_vehicule</relationshipName>
    <type>Lookup</type>
</CustomField>