unpackaged/main/default/objects/Facture_vehicule__c/fields/SalesAreaData__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vue commerciale client sur la quelle la facture a été créé.</description>
    <label>Vue Commerciale Client</label>
    <referenceTo>SalesAreaData__c</referenceTo>
    <relationshipLabel>Factures véhicules</relationshipLabel>
    <relationshipName>FacturesVehicules</relationshipName>
    <type>Lookup</type>
</CustomField>