unpackaged/main/default/objects/Facture_vehicule__c/fields/Type_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Type_de_contrat__c</fullName>
    <label>Type de contrat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>LD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>