unpackaged/main/default/objects/Facture_vehicule__c/fields/Type_de_facture__c.field-meta.xml
<CustomField>
    <fullName>Type_de_facture__c</fullName>
    <label>Type de facture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>