unpackaged/main/default/objects/Facture_vehicule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Agence__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_de_facture__c</columns>
    <columns>Date_echeance__c</columns>
    <columns>ID_facture_IGLOO__c</columns>
    <columns>Montant_HT__c</columns>
    <columns>Montant_TTC__c</columns>
    <columns>N_Parc__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Numero_de_facture_IGLOO__c</columns>
    <columns>Type_de_contrat__c</columns>
    <columns>Type_de_facture__c</columns>
    <columns>Compte__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>